# PIKA_AI

./: README.md  dqn.py  dqn_imp.py  pyproject.toml  q_learning.py  test_dqn.py
Tables/: DQN.pt  DQN_20000.pt  DQN_3000.pt  DQN_5000.pt  DQN_IMP.pt  DQN_PLY1.pt  DQN_PLY1_3000.pt
