[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gym-pikachu-volleyball = "^0.0.6"
pyglet = "^1.5.26"
torch = "^1.11.0"
tqdm = "^4.64.0"
pygame = "^2.1.2"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
